# polyfit

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  polyfit.cpp
apps/dev/: calculate_polygon_study_statistics.cpp  calculate_statistics_for_appendix.cpp  common_includes.hpp  convert_training_data.cpp  draw_paper_figures.hpp  drawing.hpp  export_continuation_data_as_csv.cpp  export_multicolor_regions.cpp  generate_training_examples.cpp  polyvec_baseline.cpp  polyvec_stages.cpp  quick_annotator.cpp  test_are_points_facing_inside.cpp  test_bezier_splitting.cpp  test_curvature_variation_minimization.cpp  test_distance_bounds_from_points.cpp  test_fitting_forest_features.cpp  test_orientation.cpp  toy_draw_curves.cpp  train_fitting_forest.cpp  training.hpp  viz_forest.cpp  viz_training_data.cpp  write_boundary_points.cpp
apps/tests/bezier_merging/: _find_affine_transformation.cpp  _merge_curves.cpp  _merge_one_curve.cpp  _potrace_params.cpp  merge_failure_01.txt
apps/tests/curve-tracer/: fit-points.cpp
apps/tests/cycpputil/: advanced_module.py  basic_module.py  basic_types.cpp  call_python.cpp  dict.cpp  vector.cpp
apps/tests/geom/: bezier.cpp  curve_approx_intersect.cpp  line_intersection.cpp  sdf_computer.cpp  tangent_and_curvature.cpp  vtk_writer.cpp  winding_number.cpp
apps/tests/globfit/: curves.cpp  example.cpp  objectives.cpp
apps/tests/mc/: _associate_holes.cpp  _junctions.cpp  _raster_image_connectivity.cpp
apps/tests/util/: summable_to_one_sampler.cpp
include/nse/: IteratorRange.h  MathematicaFormatter.h
include/polyvec/: api.hpp  debug.hpp  eigen_serialization.hpp  geom.hpp  geom.inl  misc.hpp  options.hpp  pipeline_helper.hpp
include/polyvec/core/: constants.hpp  log.hpp  macros.hpp  options.hpp  types.hpp
include/polyvec/curve-tracer/: bezier_merging.hpp  curvature_variation_optimize_coordinate_descent.hpp  curve.hpp  curve_arc.hpp  curve_bezier.hpp  curve_constraint.hpp  curve_constraints.hpp  curve_fit_error.hpp  curve_fitter.hpp  curve_line.hpp  curve_objective.hpp  curve_objectives.hpp  curve_parametrization.hpp  curve_parametrizations.hpp  curve_solver.hpp  find-fitting-points.hpp  fit_classifier.hpp  fit_options.hpp  measure_accuracy.hpp  measure_accuracy_polygon.hpp  measure_curvature.hpp  measure_hausdorff.hpp  refinement.hpp  regularity_handling.hpp  spline.hpp  spline_types.hpp  spline_validation.hpp  tangent-fits.hpp
include/polyvec/geometry/: angle.hpp  angle.inl  line.hpp  path.hpp  raster.hpp  raster.inl  sdf_computer.hpp  smooth_curve.hpp  winding_number.hpp
include/polyvec/image-segment/: image_segment.hpp
include/polyvec/io/: ascii.hpp  draw.hpp  image.hpp  pdf.hpp  svg.hpp  vtk_curve_writer.hpp  write_matrix_for_matlab.hpp
include/polyvec/mc/: are_pixel_polygons_identical.hpp  associate_holes.hpp  bit_vector.hpp  get_bounding_box.hpp  get_pixel_regions.hpp  junction.hpp  mesh_connectivity.hpp  prune_identical_pixel_polygons.hpp  random_color.hpp  raster_image_connectivity.hpp  segment_connectivity.hpp  sort_points.hpp
include/polyvec/polygon-tracer/: align_inflections_to_half_space.hpp  align_opposite_corners.hpp  boundary-graph.hpp  detect_parallel_edges_relative_proximity.hpp  detect_perfect_lines_inner_points.hpp  error-metrics.hpp  error.hpp  find_2x2_corners.hpp  image_boundary.hpp  is_symmetric_path_valid.hpp  iteration-callback.hpp  iterative-global.hpp  iterative-local.hpp  minimum.hpp  multi_polygon.hpp  pick_optimal_symmetry_side.hpp  postprocessor.hpp  preserve_axis_aligned.hpp  prune_edges_force_vertex.hpp  regularized.hpp  remove_edges_crossing_implicit_corners.hpp  symmetric.hpp
include/polyvec/regularity/: add_90_degree_edges.hpp  add_local_symmetries.hpp  add_parallel_edges.hpp  are_points_facing_inside.hpp  check_opposite_points_winding_number.hpp  check_same_line_continuation.hpp  collapse_opposite_short_segments.hpp  construct_regularity_graph.hpp  continuations.hpp  continuations_2018.hpp  count_inflections_outside_subpath.hpp  find_symmetric_primitives.hpp  is_subpath_valid.hpp  regularity_action.hpp  replace_flat_nodes_with_edges.hpp  symmetry.hpp  test_continuations.hpp  test_parallel.hpp
include/polyvec/shortest-path/: dijkstra.hpp
include/polyvec/utils/: arguments.hpp  color.hpp  curve_sampling.hpp  cycpputil.hpp  deriv_test.hpp  directions.hpp  matrix.hpp  num.hpp  potrace.hpp  string.hpp  summable_to_one_sampler.hpp  system.hpp  union-find.hpp
include/polyvec/visualize/: accuracy.hpp  primitives.hpp
scripts/: run_data_baseline.py
source/polyvec/: api.cpp  debug.cpp  misc.cpp  options.cpp  pipeline_helper.cpp
source/polyvec/core/: arguments.cpp  log.cpp  options.cpp
source/polyvec/curve-tracer/: bezier_merging.cpp  curvature_variation_minimization_coordinate_descent.cpp  curve.cpp  curve_bezier.cpp  curve_constraints.cpp  curve_fit_error.cpp  curve_fitter.cpp  curve_line.cpp  curve_objective.cpp  curve_objectives.cpp  curve_parametrization.cpp  curve_parametrizations.cpp  curve_solver.cpp  find-fitting-points.cpp  fit_classifier.cpp  measure_accuracy.cpp  measure_accuracy_polygon.cpp  measure_curvature.cpp  measure_hausdorff.cpp  refinement.cpp  regularity_handling.cpp  spline.cpp  spline_types.cpp  spline_validation.cpp  tangent-fits.cpp
source/polyvec/geometry/: line.cpp  path.cpp  sdf_computer.cpp  smooth_curve.cpp  winding_number.cpp
source/polyvec/image-segment/: image_segment.cpp
source/polyvec/io/: ascii.cpp  draw.cpp  image.cpp  pdf.cpp  svg.cpp  vtk_curve_writer.cpp
source/polyvec/mc/: are_pixel_polygons_identical.cpp  associate_holes.cpp  get_bounding_box.cpp  get_pixel_regions.cpp  junction.cpp  mesh_connectivity.cpp  prune_identical_pixel_polygons.cpp  random_color.cpp  raster_image_connectivity.cpp  segment_connectivity.cpp  sort_points.cpp
source/polyvec/polygon-tracer/: align_inflections_to_half_space.cpp  align_opposite_corners.cpp  boundary-graph.cpp  detect_parallel_edges_relative_proximity.cpp  detect_perfect_lines_inner_points.cpp  error-metrics.cpp  error.cpp  find_2x2_corners.cpp  minimum.cpp  (+11 more)
trained/: random_forest_paper.txt
(+34 files in other folders)
